--- a/style.css
+++ b/style.css
@@ -3,13 +3,7 @@ body {
     background-color: #faf6ef;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #353535;
-    padding: 0vw;
     margin: auto;
-}
-
-
-ul{
-    margin: 0px;
 }
 
 #logo {
@@ -21,8 +15,8 @@ ul{
 }
 
 #navbar {
-    margin: 0vw;
-    padding: 1rem;
+    margin: auto;
+    padding: 1vw;
     background-color: #8aa5b8;
     font-family: "Playfair Display", sans-serif;
     color: #353535;
@@ -119,29 +113,17 @@ footer a{
     display: flex;
     align-items: center;
     text-transform: uppercase;
-    margin-left: 0px;
-    letter-spacing: 1px;
+    margin-left: 0vw;
+    letter-spacing: 0.1vw;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #353535;
     text-decoration: none;
 }
 footer h2{
-    margin-right: 10px;
-    margin-top: 15px;
-    margin-left: 0px;
+    margin-right: 1vw;
+    margin-top: 1.5vw;
+    margin-left: 0vw;
+    float: left;
     font-family: "Playfair Display"
 }
-
-#copyright {
-    display: flex;
-    position: absolute;
-    right: 0;
-    margin-right: 40px;
-    letter-spacing: 1px;
-    font-weight: 500;
-    font-family: "Playfair Display";
-    color: #353535;
-    text-decoration: none;
-}
-
