--- a/about.css
+++ b/about.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #faf6ef;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -52,7 +53,8 @@ header {
 }
 
 body > main article {
-    margin: auto;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #container {
