--- a/about.css
+++ b/about.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #faf6ef;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -61,6 +60,14 @@ body > main article {
     display: flex;
 }
 
+#dog1 {
+    text-decoration: none;
+    padding: 0.5%;
+    border: #d7d2c9 solid;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #353535;
+}
+
 #sidebar {
     width: 250px;
     background-color: #faf6ef;
@@ -92,14 +99,6 @@ body > main article {
     justify-content: left;
 }
 
-#dog1 {
-    text-decoration: none;
-    padding: 0.5%;
-    border: #d7d2c9 solid;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #353535;
-}
-
 img {
     border-radius: 30%;
 }
@@ -118,25 +117,21 @@ form {
     padding: 1%;
 }
 
-#logobottom {
-    float: left;
-}
-
 footer a{
     display: flex;
     align-items: center;
     text-transform: uppercase;
-    margin-left: 0vw;
-    letter-spacing: 0.1vw;
+    margin-left: 0px;
+    letter-spacing: 1px;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #353535;
     text-decoration: none;
 }
 footer h2{
-    margin-right: 1vw;
-    margin-top: 1.5vw;
-    margin-left: 0vw;
-    float: left;
+    margin-right: 10px;
+    margin-top: 15px;
+    margin-left: 0px;
     font-family: "Playfair Display"
 }
+
