--- a/style.css
+++ b/style.css
@@ -109,25 +109,21 @@ form {
     padding: 1%;
 }
 
-#logobottom {
-    float: left;
-}
-
 footer a{
     display: flex;
     align-items: center;
     text-transform: uppercase;
-    margin-left: 0vw;
-    letter-spacing: 0.1vw;
+    margin-left: 0px;
+    letter-spacing: 1px;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #353535;
     text-decoration: none;
 }
 footer h2{
-    margin-right: 1vw;
-    margin-top: 1.5vw;
-    margin-left: 0vw;
-    float: left;
+    margin-right: 10px;
+    margin-top: 15px;
+    margin-left: 0px;
     font-family: "Playfair Display"
 }
+
