--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
     padding: 1vw;
     background-color: #8aa5b8;
     font-family: "Playfair Display", sans-serif;
-    color: #353535;
-    font-size: 100%;
+    color: #faf6ef;
+    font-size: 17px;
     display: block;
     text-decoration: none;
     text-align: center;
@@ -42,11 +42,55 @@ body {
     letter-spacing: 1px;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #353535;
+    color: #faf6ef;
     text-decoration: none;
     display: inline-block;
     border-bottom: 0.2px solid #6d8697;
 }
+
+.banner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #faf6ef;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+    display: block;
+
+}
+
+.banner-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    width: 70%;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
+    padding: 5px;
+    border-radius: 10px; /* Optional: Rounded corners */
+}
+
+.banner-text h1 {
+    font-size: 48px;
+    margin-bottom: 10px;
+    
+}
+
+.banner-text p {
+    font-size: 20px;
+}
+
 
 header {
     font-family: "Playfair Display", sans-serif;
@@ -62,7 +106,6 @@ body > main article {
 
 #sidebar {
     width: 250px;
-    background-color: #faf6ef;
     color: #353535;
     padding: 20px;
     float: left;
@@ -91,9 +134,6 @@ body > main article {
     justify-content: left;
 }
 
-img {
-    border-radius: 30%;
-}
 
 form {
     text-align: center;
@@ -107,6 +147,8 @@ form {
     background-color: #8aa5b8;
     margin: auto;
     padding: 1%;
+    color: #faf6ef;
+    font-size: 15px;
 }
 
 footer a{
@@ -117,7 +159,7 @@ footer a{
     letter-spacing: 1px;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #353535;
+    color: #faf6ef;
     text-decoration: none;
 }
 footer h2{
@@ -127,3 +169,6 @@ footer h2{
     font-family: "Playfair Display"
 }
 
+#logobottom {
+    float: left;
+}
